<resources>
  <string name="app_name">TriviaGame</string>
  <string name="game_title">Trivia Fun Times!</string>
  <string name="time_button_text">TIMED</string>
  <string name="sudden_button_text">SUDDEN DEATH</string>
  <string name="relax_button_text">RELAXED</string>
  <string name="categories_title">CATEGORIES</string>
  <string name="all_questions_category">ALL THE QUESTIONS</string>
  <string name="relaxed_win_text">THAT\'S ALL OF THEM!</string>
  <string name="sudden_lose_text">YOU LOSE!</string>
  <string name="sudden_win_text">YOU MADE IT!</string>
  <string name="time_correct_text">CORRECT!</string>
  <string name="time_incorrect_text">INCORRECT! TRY AGAIN!</string>
  <string name="time_lose_text">YOU RAN OUT OF TIME!</string>

  <string name="difficulty_title">DIFFICULTY</string>
  <string name="easy_button_text">EASY</string>
  <string name="medium_button_text">MEDIUM</string>
  <string name="hard_button_text">HARD</string>

  <string name="tally_correct">Correct: %d</string>
  <string name="tally_incorrect">Incorrect: %d</string>
  <string name="timer">%d secs</string>
  <string name="all_button_text">ALL</string>

  <string name="add_categories_title">ADD \nCATEGORIES</string>
  <string name="base_url">https://opentdb.com/</string>
  <string name="post_game_fragment_title">POST GAME RESULTS</string>
  <string name="main_menu_button_text">RETURN TO GAME SELECT</string>
  <string name="questions_correct">CORRECT: %d</string>
  <string name="game_grade">GRADE: %s</string>
  <string name="game_grade_text">%s</string>
  <string name="sign_in_error">Unable to sign in. Please check your credentials and connection.</string>
  <string name="sign_out">Sign Out</string>

  <string name="relaxed_high_score">Relaxed High Score: %d</string>
  <string name="sudden_high_score">Sudden Death High Score: %d</string>
  <string name="time_high_score">Timed High Score: %d</string>

  <string name="relaxed_high_score_key">RELAXED_HIGH_SCORE</string>
  <string name="sudden_high_score_key">SUDDEN_HIGH_SCORE</string>
  <string name="time_high_score_key">TIME_HIGH_SCORE</string>
  <string name="alert_dialog_title">Back to Game Select</string>
  <string name="alert_dialog_message">Go back to game select?</string>
  <string name="difficulty_string_key">difficulty</string>
  <string name="easy_difficulty_key">easy</string>
  <string name="medium_difficulty_key">medium</string>
  <string name="hard_difficulty_key">hard</string>
  <string name="all_difficulty_key">all</string>
  <string name="game_type_string_key">gameType</string>
  <string name="time_game_string_key">time</string>
  <string name="sudden_game_string_key">sudden</string>
  <string name="relaxed_game_string_key">relaxed</string>
  <string name="category_string_key">category</string>
  <string name="main_fragment_tag">main</string>
  <string name="correct_questions_string_key">correct</string>
  <string name="total_questions_string_key">total</string>
  <string name="lives_counter">Lives: %d</string>

</resources>
