<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:padding="10dp"
  android:background="@android:color/holo_blue_dark"
  tools:context=".view.PostGameFragment">

  <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp">

    <TextView
      style="@style/TitleStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:fontFamily="@font/faster_one"
      android:text="@string/post_game_fragment_title"/>

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:cardElevation="10dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <TextView
        android:id="@+id/questions_correct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/questions_correct"
        style="@style/CorrectTallyStyle"/>

      <TextView
        android:id="@+id/high_score_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        style="@style/TallyStyle"/>

      <TextView
        android:id="@+id/game_grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/game_grade"
        style="@style/IncorrectTallyStyle"/>

      <TextView
        android:id="@+id/game_grade_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/game_grade_text"
        style="@style/TallyStyle"/>
    </LinearLayout>

  </androidx.cardview.widget.CardView>

  <Button
    android:id="@+id/main_menu_button"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.15"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:background="@drawable/return_to_game_select"
    android:text="@string/main_menu_button_text"
    android:fontFamily="@font/faster_one"
    style="@style/CategoryName"/>

</LinearLayout>