<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:padding="10dp"
  android:background="@android:color/holo_blue_dark"
  tools:context=".view.DifficultyFragment">

  <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp">

    <TextView
      style="@style/TitleStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:fontFamily="@font/faster_one"
      android:text="@string/difficulty_title"/>
  </androidx.cardview.widget.CardView>


  <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.5"
    android:layout_marginTop="30dp"
    app:cardElevation="10dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:gravity="center"
      android:padding="10dp">

      <Button
        android:id="@+id/easy_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginTop="10dp"
        android:background="@drawable/easy_button"
        android:text="@string/easy_button_text"
        android:fontFamily="@font/faster_one"
        style="@style/CategoryName"/>

      <Button
        android:id="@+id/medium_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginTop="30dp"
        android:background="@drawable/medium_button"
        android:text="@string/medium_button_text"
        android:fontFamily="@font/faster_one"
        style="@style/CategoryName"/>

      <Button
        android:id="@+id/hard_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginTop="30dp"
        android:background="@drawable/hard_button"
        android:text="@string/hard_button_text"
        android:fontFamily="@font/faster_one"
        style="@style/CategoryName"/>

      <Button
        android:id="@+id/all_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginTop="30dp"
        android:background="@drawable/all_button"
        android:text="@string/all_button_text"
        android:fontFamily="@font/faster_one"
        style="@style/CategoryName"/>

    </LinearLayout>

  </androidx.cardview.widget.CardView>



</LinearLayout>