<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="10dp"
  android:background="@android:color/holo_blue_dark"
  tools:context=".view.MainFragment">

  <android.support.v7.widget.CardView
    android:id="@+id/title_card"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardBackgroundColor="@android:color/white">

    <TextView
      android:id="@+id/game_title"
      style="@style/TitleStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:padding="25dp"
      android:fontFamily="@font/faster_one"
      android:gravity="center"
      android:text="@string/game_title"
      android:textAllCaps="false"
      android:textSize="70sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
  </android.support.v7.widget.CardView>


  <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardBackgroundColor="@android:color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/title_card">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <Button
        android:id="@+id/time_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/time_button_text"
        android:fontFamily="@font/faster_one"
        style="@style/CategoryName"/>

      <Button
        android:id="@+id/difficulty_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/sudden_button_text"
        android:fontFamily="@font/faster_one"
        style="@style/CategoryName"/>

      <Button
        android:id="@+id/relaxed_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/relax_button_text"
        android:fontFamily="@font/faster_one"
        style="@style/CategoryName"/>
    </LinearLayout>


  </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>